--- a/src/components/pages/Productlisting/product.scss
+++ b/src/components/pages/Productlisting/product.scss
@@ -1,7 +1,7 @@
 $navbg : #967d6b;
 $bannercolor :#C9AC97;
 $textblack :#000;
-$textwhite : #fff;
+$textwhite : #ffffff;
 $colorlink:#BAA3F4;
 .banner
 {
